# dspy-production-ready-course

./: .cursorrules  .gitignore  CLEANUP_PROPOSAL.md  Makefile  cleanup.sh  estrutura-livro.md  main.py  pyproject.toml
docs/: 00-INDICE-VISUAL.md  01-prefacio.md  BOOK_OUTLINE.md  CHANGELOG.md  CONTEUDO-BATCH-CAPS-1-3-14-17.md  CONTEUDO-BATCH-CAPS-5-6-7.md  CONTEUDO-BATCH-CAPS-8-13.md  ESTRUTURA-REORGANIZADA.md  KNOWLEDGE_GAPS.md  MAPEAMENTO_NOTEBOOKS.md  MISSAO-COMPLETA-TODOS-CAPITULOS.md  ONDE-ENCONTRAR-TUDO.md  PASTAS-PREENCHIDAS-COMPLETO.md  PROGRESS_TRACKER.md  README.md  RESEARCH_LLMOPS.md  SESSAO_PROGRESSO.md  SUMARIO-PASSOS-1-E-2.md  _config.yml  _toc.yml  como-usar-este-livro.md  index.md  introducao.md  recursos-adicionais.md  requirements.txt  sobre-o-autor.md
helpers/: observability.py
notebooks/: MULTIAGENT_OPTIMIZATION_SUMMARY.md  OTIMIZACAO_GROQ_MIPROV2.md  README_DSPY_AGENTS.md  README_DSPY_MULTIAGENT_SERIES.md  SUMMARY_MULTIAGENT_CONTENT.md  SUMMARY_RESTRUCTURING.md  dspy_agents_advanced_handson.ipynb  dspy_agents_advanced_handson_final.ipynb  dspy_agents_advanced_linear.ipynb  dspy_agents_advanced_linear_final.ipynb  dspy_agents_basic_handson.ipynb  dspy_agents_basic_handson_final.ipynb  dspy_agents_basic_linear.ipynb  dspy_agents_basic_linear_final.ipynb  dspy_agents_basic_linear_full.ipynb  dspy_customer_service_agent.ipynb  dspy_image_data_extraction.ipynb  dspy_memory_react_agent.ipynb  dspy_multiagent_cognitive_architectures.ipynb  dspy_multiagent_optimization.ipynb  dspy_optimization_mastery.ipynb  dspy_programming_language_models_enhanced.ipynb  (+8 more)
(+40 files in other folders)
